crates/parser/src/tests/snapshots/kclvm_parser__tests__types__list_type_3.snap
---
source: parser/src/tests/types.rs
expression: "crate::tests::parsing_type_string(r####\"[[]]\"####)"
---
Node {
    node: List(
        ListType {
            inner_type: Some(
                Node {
                    node: List(
                        ListType {
                            inner_type: None,
                        },
                    ),
                    filename: "",
                    line: 1,
                    column: 1,
                    end_line: 1,
                    end_column: 3,
                },
            ),
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 4,
}

