crates/parser/src/tests/snapshots/kclvm_parser__tests__types__literal_type_1.snap
---
source: parser/src/tests/types.rs
expression: "crate::tests::parsing_type_string(r####\"False\"####)"
---
Node {
    node: Literal(
        Bool(
            false,
        ),
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 5,
}

