crates/parser/src/tests/snapshots/kclvm_parser__tests__types__named_type_0.snap
---
source: parser/src/tests/types.rs
expression: "crate::tests::parsing_type_string(r####\"Person\"####)"
---
Node {
    node: Named(
        Identifier {
            names: [
                Node {
                    node: "Person",
                    filename: "",
                    line: 1,
                    column: 0,
                    end_line: 1,
                    end_column: 6,
                },
            ],
            pkgpath: "",
            ctx: Load,
        },
    ),
    filename: "",
    line: 1,
    column: 0,
    end_line: 1,
    end_column: 6,
}

