crates/parser/src/tests/snapshots/kclvm_parser__tests__types__type_str_0.snap
---
source: parser/src/tests/types.rs
expression: "crate::tests::parsing_type_node_string(r####\"int\"####)"
---
int
